--- a/Arc/index.html
+++ b/Arc/index.html
@@ -30,7 +30,6 @@
 
         <!-- หน้าก่อนเข้าหน้า Home -->
         <div v-if="what_page == 'Before_Time_To_Bloom'">
-            <!-- <img src="Architecture/Page_before entering_home page/logo.gif" class="before"> -->
             <video autoplay muted style="margin: 0;" id="before">
                 <source src="Architecture/Page_before entering_home page/time to bloom.mp4" type="video/mp4">
             </video>
@@ -40,7 +39,8 @@
         <!-- แถบเมนูด้านบน -->
         <nav v-if="what_page != 'Before_Time_To_Bloom'" class="navbar navbar-expand menu">
 
-            <img src="Architecture/logoweb.png" class="navbar-brand navbar-nav logo_png" @click="change_page('Time_To_Bloom')">
+            <img src="Architecture/logoweb.png" class="navbar-brand navbar-nav logo_png"
+                @click="change_page('Time_To_Bloom')">
 
             <ul data-aos="fade-down" v-if="what_page != 'Time_To_Bloom'" class="navbar-nav ml-auto menu_page">
                 <li class="nav-item">
@@ -64,16 +64,14 @@
             <div class="row Time_To_Bloom_row">
                 <div class="cal-6">
                     <p class="time_to_bloom_text">Discover all<br>about law<br>for women<br>in Thailand</p>
-                    <img class="time_to_bloom" src="Architecture/Time_To_Bloom_page/time_to_bloom.png" @click="change_page('Home')">
+                    <img class="time_to_bloom" src="Architecture/Time_To_Bloom_page/time_to_bloom.png"
+                        @click="change_page('Home')">
                 </div>
                 <div class="cal-6">
                     <video autoplay muted style="margin: 0;" class="Time_To_Bloom_bg_vdo">
                         <source src="final3 - Copy.mp4" type="video/mp4">
                     </video>
                 </div>
-                <!-- <div class="cal-6"> -->
-                <!-- <img id="gif_home" src="Architecture/Time_To_Bloom_page/final.gif" class="logo_gif"> -->
-                <!-- </div> -->
             </div>
         </div>
         <!-- หน้า Time_To_Bloom -->
@@ -85,9 +83,9 @@
                     <video autoplay muted style="margin: 0;" class="home_bg_vdo">
                         <source src="Architecture/solve/homepage/หยดน้ำ1.mp4" type="video/mp4">
                     </video>
-                    <!-- <img :src="info.Home[0].Img" class="home_gif1"> -->
                 </div>
-                <div data-aos-anchor-placement="top-center" data-aos="fade-left" class="col-6" style="padding-left: 5.15625vw; padding-right: -5.15625vw;">
+                <div data-aos-anchor-placement="top-center" data-aos="fade-left" class="col-6"
+                    style="padding-left: 5.15625vw; padding-right: -5.15625vw;">
                     <p class="topic_text home_topic_text">
                         {{info.Home[0].LawName}}
                     </p>
@@ -102,7 +100,6 @@
 
             <video autoplay muted style="margin: 0;" class="home_bg_vdo2">
                 <source src="Architecture/solve/homepage/กรอบ3.mp4" type="video/mp4">
-                <!-- <source src="Architecture/solve/homepage/กรอบรูป.mp4" type="video/mp4"> -->
             </video>
             <div v-if="what_page == 'Home'" class="container">
                 <div data-aos-anchor-placement="top-center" data-aos="fade-down" class="home_text2">
@@ -113,13 +110,53 @@
                         {{info.Home[1].Mean}}
                     </p>
                 </div>
-                <!-- <img :src="info.Home[1].Img"> -->
             </div>
         </div>
-        <!-- หน้า Law -->
+        <!-- หน้า Home -->
 
         <!-- หน้า Law -->
         <div v-if="what_page == 'Law'" class="container">
+            <div v-if="what_law == 'Main'" class="row">
+                <div v-if="!status_law[0]" @click="change_law('law0')" class="col-6"
+                    style="width: 100px; height: 100px; background-color: orange;">กฎหมายการเลือกตั้ง</div>
+                <div v-if="status_law[0]" @click="change_law('law0')" class="col-6" style="width: 100px; height: 100px; background: purple;">กฎหมายการเลือกตั้ง</div>
+                <div v-if="!status_law[1]" @click="change_law('law1')" class="col-6"
+                    style="width: 100px; height: 100px; background-color: green;">กฎหมายลาคลอด</div>
+                <div v-if="status_law[1]" @click="change_law('law1')" class="col-6" style="width: 100px; height: 100px; background: red;">กฎหมายลาคลอด</div>
+            </div>
+            <div v-if="what_law == 'law0'" class="row">
+                <div class="col-7">
+                    <video autoplay muted style="margin: 0;" class="home_bg_vdo2">
+                        <source src="Architecture/solve/law/เลือกตั้ง.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <div class="col-5">
+                    <p class="topic_text">
+                        {{info.Law[0].LawN}}
+                    </p>
+                    <p class="text">
+                        {{info.Law[0].LawMean1}}<br><br>
+                        {{info.Law[0].LawMean2}}
+                    </p>
+                </div>
+            </div>
+            <div v-if="what_law == 'law1'" class="row">
+                <div class="col-5">
+                    <video autoplay muted style="margin: 0;" class="home_bg_vdo2">
+                        <source src="Architecture/solve/law/ลาคลอด.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <div class="col-7">
+                    <p class="topic_text">
+                        {{info.Law[1].LawN}}<br>
+                        {{info.Law[1].LawN1}}
+                    </p>
+                    <p class="text">
+                        {{info.Law[1].LawMean1}}<br><br>
+                        {{info.Law[1].LawMean2}}
+                    </p>
+                </div>
+            </div>
         </div>
         <!-- หน้า Law -->
 
@@ -138,108 +175,88 @@
                     <nav class="navbar navbar-expand contact_menu">
                         <ul class="nav nav-pills" role="tablist">
                             <li class="nav-item">
-                                <a class="nav-link active" data-toggle="pill" href="#" role="tab" aria-selected="true" @click="contact_mean = 0">{{info.Contact[0].CName}}</a>
+                                <a class="nav-link active" data-toggle="pill" href="#" role="tab" aria-selected="true"
+                                    @click="contact_mean = 0">{{info.Contact[0].CName}}</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" data-toggle="pill" href="#" role="tab" aria-selected="false" @click="contact_mean = 1">{{info.Contact[1].CName}}</a>
+                                <a class="nav-link" data-toggle="pill" href="#" role="tab" aria-selected="false"
+                                    @click="contact_mean = 1">{{info.Contact[1].CName}}</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" data-toggle="pill" href="#" role="tab" aria-selected="false" @click="contact_mean = 2">{{info.Contact[2].CName}}</a>
+                                <a class="nav-link" data-toggle="pill" href="#" role="tab" aria-selected="false"
+                                    @click="contact_mean = 2">{{info.Contact[2].CName}}</a>
                             </li>
                         </ul>
                     </nav>
                     <div class="contact_info">
-                        <img src="Architecture/solve/contact/home.png" class="contact_logo" style="height: 18px; width: 20px;">
+                        <img src="Architecture/solve/contact/home.png" class="contact_logo"
+                            style="height: 18px; width: 20px;">
                         <p>{{info.Contact[contact_mean].Address}}</p>
-                        <img src="Architecture/solve/contact/phone.png" class="contact_logo" style="height: 16px; width: 14px;">
+                        <img src="Architecture/solve/contact/phone.png" class="contact_logo"
+                            style="height: 16px; width: 14px;">
                         <p>{{info.Contact[contact_mean].Phone}}</p>
-                        <img src="Architecture/solve/contact/emall.png" class="contact_logo" style="height: 12px; width: 17px;">
+                        <img src="Architecture/solve/contact/emall.png" class="contact_logo"
+                            style="height: 12px; width: 17px;">
                         <p>{{info.Contact[contact_mean].Email}}</p>
-                        <img src="Architecture/solve/contact/facebook.png" class="contact_logo" style="height: 18px; width: 18px;">
-                        <p>Facebook: <a :href="info.Contact[contact_mean].LinkFB" target="_blank">{{info.Contact[contact_mean].FB}}</a></p>
-                        <img src="Architecture/solve/contact/web.png" class="contact_logo" style="height: 22px; width: 22px;">
-                        <p>Website: <a :href="info.Contact[contact_mean].Web" target="_blank">{{info.Contact[contact_mean].Web}}</a></p>
+                        <img src="Architecture/solve/contact/facebook.png" class="contact_logo"
+                            style="height: 18px; width: 18px;">
+                        <p>Facebook: <a :href="info.Contact[contact_mean].LinkFB"
+                                target="_blank">{{info.Contact[contact_mean].FB}}</a></p>
+                        <img src="Architecture/solve/contact/web.png" class="contact_logo"
+                            style="height: 22px; width: 22px;">
+                        <p>Website: <a :href="info.Contact[contact_mean].Web"
+                                target="_blank">{{info.Contact[contact_mean].Web}}</a></p>
                     </div>
                 </div>
                 <div data-aos="fade-left" data-aos-anchor-placement="top-center" class="col-7 test">
-                    <iframe v-if="contact_mean == 0" class="test" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15483.088801953883!2d100.75716!3d14.031513!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x92513d71fa2aabf1!2z4Lih4Li54Lil4LiZ4Li04LiY4Li0IOC4m-C4p-C4teC4k-C4siDguKvguIfguKrguIHguLjguKUg4LmA4Lie4Li34LmI4Lit4LmA4LiU4LmH4LiB4LmB4Lil4Liw4Liq4LiV4Lij4Li1!5e0!3m2!1sth!2sth!4v1603780240501!5m2!1sth!2sth"
+                    <iframe v-if="contact_mean == 0" class="test"
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15483.088801953883!2d100.75716!3d14.031513!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x92513d71fa2aabf1!2z4Lih4Li54Lil4LiZ4Li04LiY4Li0IOC4m-C4p-C4teC4k-C4siDguKvguIfguKrguIHguLjguKUg4LmA4Lie4Li34LmI4Lit4LmA4LiU4LmH4LiB4LmB4Lil4Liw4Liq4LiV4Lij4Li1!5e0!3m2!1sth!2sth!4v1603780240501!5m2!1sth!2sth"
                         frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-                    <iframe v-if="contact_mean == 1" class="test" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15499.778348702363!2d100.549197!3d13.782214!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1e74e8b1c0b10fac!2zQWN0aW9uQWlkIFRoYWlsYW5kICjguYHguK3guYfguITguIrguLHguYjguJnguYDguK3guJQg4Lib4Lij4Liw4LmA4LiX4Lio4LmE4LiX4LiiKQ!5e0!3m2!1sth!2sth!4v1603780300411!5m2!1sth!2sth"
+                    <iframe v-if="contact_mean == 1" class="test"
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15499.778348702363!2d100.549197!3d13.782214!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1e74e8b1c0b10fac!2zQWN0aW9uQWlkIFRoYWlsYW5kICjguYHguK3guYfguITguIrguLHguYjguJnguYDguK3guJQg4Lib4Lij4Liw4LmA4LiX4Lio4LmE4LiX4LiiKQ!5e0!3m2!1sth!2sth!4v1603780300411!5m2!1sth!2sth"
                         frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-                    <iframe v-if="contact_mean == 2" class="test" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15497.802108053562!2d100.5661086!3d13.8119642!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xfc6ba2124b2cff05!2sAmnesty%20International%20Thailand!5e0!3m2!1sth!2sth!4v1603780329645!5m2!1sth!2sth"
+                    <iframe v-if="contact_mean == 2" class="test"
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15497.802108053562!2d100.5661086!3d13.8119642!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xfc6ba2124b2cff05!2sAmnesty%20International%20Thailand!5e0!3m2!1sth!2sth!4v1603780329645!5m2!1sth!2sth"
                         frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
             </div>
         </div>
         <!-- หน้า Contact -->
 
-        <!-- ปุ่มกด Back Next -->
-        <button onclick="topFunction()" id="Btn_top" title="Go to top">Top</button>
-        <!-- <div v-if="final_page" class="align-text-bottom">
-            <div class="row" style="margin: 0;">
-                <div class="col-6">
-                    <p class="button back" @click="change_page('Time_To_Bloom')">Back</p>
-                </div>
-                <button onclick="topFunction()" id="Btn_top" title="Go to top">Top</button>
-                <div class="col-6">
-                    <p class="button next" @click="change_page('Law')">Next</p>
-                </div>
-            </div>
-        </div> -->
-        <!-- ปุ่มกด Back Next -->
+        <!-- ปุ่มกด Back -->
+        <button
+            v-if="(what_page == 'Law' || what_page == 'Draf law') && (what_law != 'Main' || what_draf_law != 'Main' )"
+            @click="change_law('Main'), change_draw_law('Main')" id="Btn_top">Back</button>
+        <!-- ปุ่มกด Back -->
     </div>
 
 </body>
 <script>
-    window.onscroll = function() {
-        scrollFunction()
-    };
-
-    function scrollFunction() {
-        if (document.documentElement.scrollTop > 50) {
-            document.getElementById("Btn_top").style.display = "block";
-        } else {
-            document.getElementById("Btn_top").style.display = "none";
-        }
-    }
-
-    // When the user clicks on the button, scroll to the top of the document
-    function topFunction() {
-        document.documentElement.scrollTop = 0;
-    }
 
     fetch('Time_To_Bloom.json')
         .then(response => response.json())
         .then(json => {
             app.info = json
-            console.log(json)
-            console.log("โหลด json เสร็จแล้ว")
         })
-
-    // let request = new XMLHttpRequest();
-    // request.onreadystatechange = function () {
-    //     if (request.readyState == 4 && request.status == 200) {
-    //         var myJSON = JSON.parse(request.responseText);
-    //         app.info = myJSON;
-    //     }
-    // };
-    // request.open("GET", 'Time_To_Bloom.json', true);
-    // request.send();
 
     let app = new Vue({
         el: '#app',
         data: {
             info: {},
             what_page: "Before_Time_To_Bloom",
-            final_page: false,
+            what_law: "Main",
+            what_draf_law: "Main",
+            status_law: [false, false],
+            status_draf_law: [false, false, false, false, false],
             contact_mean: 0,
         },
         methods: {
-            change_page: function(page) {
+            change_page: function (page) {
                 this.what_page = page;
+                this.what_law = 'Main';
+                this.what_draf_law = 'Main';
                 document.title = app.what_page;
                 if (page == "Home") {
-                    this.final_page = true;
                     this.hidden_or_show_scroll_bar(true);
                     document.documentElement.style.setProperty("--home_img2", 'url("Architecture/Home_page/giflaw2.gif")');
                 } else if (page == "Contact" || page == "Before_Time_To_Bloom" || page == "Time_To_Bloom") {
@@ -248,10 +265,31 @@
                     }
                     this.hidden_or_show_scroll_bar(false);
                 } else if (page != "Time_To_Bloom") {
-                    this.final_page = false;
                 }
             },
-            hidden_or_show_scroll_bar: function(boo) {
+            change_law: function (law) {
+                this.what_law = law;
+                if (law == "law0") {
+                    this.status_law[0] = true;
+                } else if (law == "law1") {
+                    this.status_law[1] = true;
+                }
+            },
+            change_draw_law: function (draw_law) {
+                this.what_draf_law = draw_law;
+                if (draw_law == "draw_law0") {
+                    this.status_draw_law[0] = true;
+                } else if (draw_law == "draw_law1") {
+                    this.status_draw_law[1] = true;
+                } else if (draw_law == "draw_law2") {
+                    this.status_draw_law[2] = true;
+                } else if (draw_law == "draw_law3") {
+                    this.status_draw_law[3] = true;
+                } else if (draw_law == "draw_law4") {
+                    this.status_draw_law[4] = true;
+                }
+            },
+            hidden_or_show_scroll_bar: function (boo) {
                 if (boo) {
                     document.documentElement.style.setProperty("--overflow", 'auto');
                 } else {
@@ -260,7 +298,7 @@
             }
         }
     })
-    var count_down = setInterval(function() {
+    var count_down = setInterval(function () {
         if (document.getElementById("before").ended) { //เช็คว่า vdo หน้าก่อน time to bloom จบยัง
             app.change_page("Time_To_Bloom");
             clearInterval(count_down);
