--- a/Arc/index.html
+++ b/Arc/index.html
@@ -119,10 +119,12 @@
             <div v-if="what_law == 'Main'" class="row">
                 <div v-if="!status_law[0]" @click="change_law('law0')" class="col-6"
                     style="width: 100px; height: 100px; background-color: orange;">กฎหมายการเลือกตั้ง</div>
-                <div v-if="status_law[0]" @click="change_law('law0')" class="col-6" style="width: 100px; height: 100px; background: purple;">กฎหมายการเลือกตั้ง</div>
+                <div v-if="status_law[0]" @click="change_law('law0')" class="col-6"
+                    style="width: 100px; height: 100px; background: purple;">กฎหมายการเลือกตั้ง</div>
                 <div v-if="!status_law[1]" @click="change_law('law1')" class="col-6"
                     style="width: 100px; height: 100px; background-color: green;">กฎหมายลาคลอด</div>
-                <div v-if="status_law[1]" @click="change_law('law1')" class="col-6" style="width: 100px; height: 100px; background: red;">กฎหมายลาคลอด</div>
+                <div v-if="status_law[1]" @click="change_law('law1')" class="col-6"
+                    style="width: 100px; height: 100px; background: red;">กฎหมายลาคลอด</div>
             </div>
             <div v-if="what_law == 'law0'" class="row">
                 <div class="col-7">
@@ -162,9 +164,118 @@
 
         <!-- หน้า Draf law -->
         <div v-if="what_page == 'Draf law'" class="container">
-            <video autoplay muted style="margin: 0;" class="draf_law_bg_vdo3">
-                <source src="Architecture/solve/draf law/test3.mp4" type="video/mp4">
-            </video>
+            <div v-if="what_draf_law == 'Main'" class="row">
+                <div class="col-4" v-if="!status_draf_law[0]" @click="change_draw_law('draw_law0')"
+                    style="width: 100px; height: 100px; background-color: orange;">ร่าง{{info.Draflaw[0].DLName1}}
+                </div>
+                <div class="col-4" v-if="status_draf_law[0]" @click="change_draw_law('draw_law0')"
+                    style="width: 100px; height: 100px; background: purple;">ร่าง{{info.Draflaw[0].DLName1}}</div>
+                <div class="col-4" v-if="!status_draf_law[1]" @click="change_draw_law('draw_law1')"
+                    style="width: 100px; height: 100px; background-color: green;">ร่าง{{info.Draflaw[1].DLName1}}
+                </div>
+                <div class="col-4" v-if="status_draf_law[1]" @click="change_draw_law('draw_law1')"
+                    style="width: 100px; height: 100px; background: red;">ร่าง{{info.Draflaw[1].DLName1}}</div>
+                <div class="col-4" v-if="!status_draf_law[2]" @click="change_draw_law('draw_law2')"
+                    style="width: 100px; height: 100px; background-color: skyblue;">ร่าง{{info.Draflaw[2].DLName1}}
+                </div>
+                <div class="col-4" v-if="status_draf_law[2]" @click="change_draw_law('draw_law2')"
+                    style="width: 100px; height: 100px; background: blue;">ร่าง{{info.Draflaw[2].DLName1}}</div>
+                <div class="col-4" v-if="!status_draf_law[3]" @click="change_draw_law('draw_law3')"
+                    style="width: 100px; height: 100px; background-color: rosybrown;">ร่าง{{info.Draflaw[3].DLName1}}
+                </div>
+                <div class="col-4" v-if="status_draf_law[3]" @click="change_draw_law('draw_law3')"
+                    style="width: 100px; height: 100px; background: brown;">ร่าง{{info.Draflaw[3].DLName1}}</div>
+                <div class="col-4" v-if="!status_draf_law[4]" @click="change_draw_law('draw_law4')"
+                    style="width: 100px; height: 100px; background-color: gold;">ร่าง{{info.Draflaw[4].DLName1}}
+                </div>
+                <div class="col-4" v-if="status_draf_law[4]" @click="change_draw_law('draw_law4')"
+                    style="width: 100px; height: 100px; background: hotpink;">ร่าง{{info.Draflaw[4].DLName1}}</div>
+            </div>
+            <div v-if="what_draf_law == 'draw_law0'" class="row">
+                <div class="col-7">
+                    <!-- <video autoplay muted style="margin: 0;" class="home_bg_vdo2">
+                        <source src="Architecture/solve/draf law/" type="video/mp4">
+                    </video> -->
+                </div>
+                <div class="col-5">
+                    <p class="topic_text">
+                        {{info.Draflaw[0].DLName1}}<br>
+                        {{info.Draflaw[0].DLName2}}
+                    </p>
+                    <p class="text">
+                        {{info.Draflaw[0].DLMean1}}
+                    </p>
+                </div>
+            </div>
+            <div v-if="what_draf_law == 'draw_law1'" class="row">
+                <div class="col-5">
+                    <!-- <video autoplay muted style="margin: 0;" class="home_bg_vdo2">
+                        <source src="Architecture/solve/draf law/" type="video/mp4">
+                    </video> -->
+                </div>
+                <div class="col-7">
+                    <p class="topic_text">
+                        {{info.Draflaw[1].DLName1}}<br>
+                        {{info.Draflaw[1].DLName2}}
+                    </p>
+                    <p class="text">
+                        {{info.Draflaw[1].DLMean1}}
+                    </p>
+                </div>
+            </div>
+            <div v-if="what_draf_law == 'draw_law2'" class="row">
+                <div class="col-5">
+                    <video autoplay muted style="margin: 0;" class="home_bg_vdo2">
+                        <source src="Architecture/solve/draf law/5-กฎหมายเมืองปลอดภัยเพื่อผู้หญิงPrimrose.mp4"
+                            type="video/mp4">
+                    </video>
+                </div>
+                <div class="col-7">
+                    <p class="topic_text">
+                        {{info.Draflaw[2].DLName1}}<br>
+                        {{info.Draflaw[2].DLName2}}
+                    </p>
+                    <p class="text">
+                        {{info.Draflaw[2].DLMean1}}<br><br>
+                        {{info.Draflaw[2].DLMean2}}
+                    </p>
+                </div>
+            </div>
+            <div v-if="what_draf_law == 'draw_law3'" class="row">
+                <div class="col-5">
+                    <video autoplay muted style="margin: 0;" class="home_bg_vdo2">
+                        <source src="Architecture/solve/draf law/6-กฎหมายการแต่งกายในอาชีพต่างๆPansies_1.mp4"
+                            type="video/mp4">
+                    </video>
+                </div>
+                <div class="col-7">
+                    <p class="topic_text">
+                        {{info.Draflaw[3].DLName1}}<br>
+                        {{info.Draflaw[3].DLName2}}
+                    </p>
+                    <p class="text">
+                        {{info.Draflaw[3].DLMean1}}<br><br>
+                        {{info.Draflaw[3].DLMean2}}
+                    </p>
+                </div>
+            </div>
+            <div v-if="what_draf_law == 'draw_law4'" class="row">
+                <div class="col-5">
+                    <video autoplay muted style="margin: 0;" class="home_bg_vdo2">
+                        <source src="Architecture/solve/draf law/ค้่าประเวณี.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <div class="col-7">
+                    <p class="topic_text">
+                        {{info.Draflaw[4].DLName1}}<br>
+                        {{info.Draflaw[4].DLName2}}
+                    </p>
+                    <p class="text">
+                        {{info.Draflaw[4].DLMean1}}<br><br>
+                        {{info.Draflaw[4].DLMean2}}
+                    </p>
+                </div>
+            </div>
         </div>
         <!-- หน้า Draf law -->
 
@@ -278,15 +389,15 @@
             change_draw_law: function (draw_law) {
                 this.what_draf_law = draw_law;
                 if (draw_law == "draw_law0") {
-                    this.status_draw_law[0] = true;
+                    this.status_draf_law[0] = true;
                 } else if (draw_law == "draw_law1") {
-                    this.status_draw_law[1] = true;
+                    this.status_draf_law[1] = true;
                 } else if (draw_law == "draw_law2") {
-                    this.status_draw_law[2] = true;
+                    this.status_draf_law[2] = true;
                 } else if (draw_law == "draw_law3") {
-                    this.status_draw_law[3] = true;
+                    this.status_draf_law[3] = true;
                 } else if (draw_law == "draw_law4") {
-                    this.status_draw_law[4] = true;
+                    this.status_draf_law[4] = true;
                 }
             },
             hidden_or_show_scroll_bar: function (boo) {
